added pip install datascience

--- a/pop_map.ipynb
+++ b/pop_map.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "09e4d20f-e98b-48fe-ae60-f83eca1a265a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install datascience"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "7f997f7c-f932-4bb7-8bc0-352071878aa3",
    "metadata": {},
@@ -50,6 +60,14 @@
     "\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7609d85-1e63-4a4f-9d1b-62b5641a783e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
